# polymodo

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
cli-gen/: Cargo.toml  build.rs
cli-gen/src/: main.rs
src/: app.rs  app_surface_driver.rs  cli.rs  config.rs  fuzzy_search.rs  ipc.rs  live_handle.rs  main.rs  notify.rs  persistence.rs  polymodo.rs  server.rs
src/mode/: launch.rs  mod.rs
src/mode/launch/: entry.rs  history.rs  launcher.rs  mod.rs  settings.rs
src/ui/: index_model.rs  mod.rs
src/windowing/: app.rs  client.rs  convert.rs  mod.rs  surface.rs  windowing.rs
src/xdg/: desktop_entry.rs  mod.rs
ui/: app-window.slint  button.slint  launcher-entry.slint  separator.slint  text-input.slint  ui.slint
ui/launcher/: launcher-entry.slint  launcher-settings.slint  launcher-window.slint  text-input.slint
windowing/: Cargo.toml
windowing/src/: app.rs  client.rs  convert.rs  lib.rs  surface.rs  windowing.rs
