[package]
name = "polymodo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "cli-gen"]
resolver = "3"

[dependencies]
log = "0.4"
log-panics = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "net", "time", "macros", "io-util", "rt-multi-thread"] }
async-compat = "0.2.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Windowing
slint = { git = "https://github.com/zeroeightysix/slint", rev = "ff0c3d6", default-features = false, features = ["std", "compat-1-2", "backend-winit-wayland", "renderer-skia-opengl", "unstable-winit-030"] }

# Launcher
nix = { version = "0.30.1", features = ["process"] }
xdg = "3.0.0"
rust-ini = "0.21.1"
nucleo = { git = "https://github.com/ToxicMushroom/nucleo.git", rev = "9b1a0eb" }
fork = "0.2.0"
rand = "0.9.0"
bincode = "2.0.1"
walkdir = "2.5.0"
icon = "0.1.2"
smol = "2.0.2"

[build-dependencies]
slint-build = { git = "https://github.com/zeroeightysix/slint" }