[package]
name = "windowing"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["xkbcommon"] }
wayland-backend = { version = "0.3", features = ["client_system", "dlopen"] }
wgpu = "24.0.1"
egui = "0.31.0"
egui-wgpu = "0.31.0"
tokio = { version = "1", default-features = false, features = ["full"] }
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
log = "0.4.22"
